// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WithCards > matches snapshot 1`] = `
<div>
  <!---->
  <!---->
  <div
    aria-label="Features"
    class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32"
    role="region"
  >
    <img
      alt=""
      class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center"
      role="presentation"
      src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2830&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply"
    />
     
    <div
      class="mx-auto max-w-7xl px-6 lg:px-8"
    >
      <div
        class="mx-auto max-w-2xl lg:mx-0"
      >
        <h2
          class="text-4xl font-bold tracking-tight text-white sm:text-6xl font-montserrat"
        >
          Test Title
        </h2>
         
        <p
          class="mt-6 text-lg leading-8 text-gray-300 space-y-4 font-sourceSans"
        >
          Test Description
          <!---->
        </p>
      </div>
       
      <div
        class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-6 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3 lg:gap-8"
        role="list"
      >
        <div
          class="flex gap-x-4 rounded-xl bg-white/5 p-6 ring-1 ring-inset ring-white/10"
          role="listitem"
        >
          <div
            class="text-3xl"
          >
            🎯
          </div>
           
          <div
            class="min-w-0 flex-1"
          >
            <h3
              class="text-base font-semibold leading-7 text-white font-montserrat overflow-hidden text-ellipsis whitespace-nowrap"
            >
              Unit 1
            </h3>
             
            <p
              class="mt-2 text-sm leading-6 text-gray-300 font-sourceSans overflow-hidden text-ellipsis whitespace-nowrap"
            >
              Description 1
            </p>
          </div>
        </div>
        <div
          class="flex gap-x-4 rounded-xl bg-white/5 p-6 ring-1 ring-inset ring-white/10"
          role="listitem"
        >
          <div
            class="text-3xl"
          >
            ⚡
          </div>
           
          <div
            class="min-w-0 flex-1"
          >
            <h3
              class="text-base font-semibold leading-7 text-white font-montserrat overflow-hidden text-ellipsis whitespace-nowrap"
            >
              Unit 2
            </h3>
             
            <p
              class="mt-2 text-sm leading-6 text-gray-300 font-sourceSans overflow-hidden text-ellipsis whitespace-nowrap"
            >
              Description 2
            </p>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  
  
  
</div>
`;

exports[`WithCards > performance > handles long content gracefully 1`] = `
<div>
  <!---->
  <!---->
  <div
    aria-label="Features"
    class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32"
    role="region"
  >
    <img
      alt=""
      class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center"
      role="presentation"
      src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2830&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply"
    />
     
    <div
      class="mx-auto max-w-7xl px-6 lg:px-8"
    >
      <div
        class="mx-auto max-w-2xl lg:mx-0"
      >
        <h2
          class="text-4xl font-bold tracking-tight text-white sm:text-6xl font-montserrat"
        >
          AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
        </h2>
         
        <p
          class="mt-6 text-lg leading-8 text-gray-300 space-y-4 font-sourceSans"
        >
          BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
          <!---->
        </p>
      </div>
       
      <div
        class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-6 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3 lg:gap-8"
        role="list"
      >
        <div
          class="flex gap-x-4 rounded-xl bg-white/5 p-6 ring-1 ring-inset ring-white/10"
          role="listitem"
        >
          <div
            class="text-3xl"
          >
            🎯
          </div>
           
          <div
            class="min-w-0 flex-1"
          >
            <h3
              class="text-base font-semibold leading-7 text-white font-montserrat overflow-hidden text-ellipsis whitespace-nowrap"
            >
              CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
            </h3>
             
            <p
              class="mt-2 text-sm leading-6 text-gray-300 font-sourceSans overflow-hidden text-ellipsis whitespace-nowrap"
            >
              DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD
            </p>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  
  
  
</div>
`;
